--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:ref": "ng build --base-href ./",
+    "build:gh": "npm run delete:docs && npm run build:ref && npm run copy:dist ",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "delete:docs": "del docs",
+    "copy:dist": "copyfiles dist/ng-bases/browser/* ./docs -f && copyfiles dist/ng-bases/3rdpartylicenses.txt ./docs -f"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +33,8 @@
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^9.0.7",
+    "copyfiles": "^2.4.1",
+    "del-cli": "^5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
